# graph_coarsening

./: .gitattributes  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build.py  build.sh
.github/workflows/: main.yml
benchmark/: CMakeLists.txt  CMakeLists.txt.in
benchmark/include/: edmonds_test.h  example_benchmark_test.h  generators_test.h  gpa_test.h  hard_matching_test.h  lam_test.h  max_weight_matching_test.h  pga_test.h  random_matching_test.h
benchmark/source/: edmonds_test.cpp  example_benchmark_test.cpp  generators_test.cpp  gpa_test.cpp  hard_matching_test.cpp  lam_test.cpp  max_weight_matching_test.cpp  pga_test.cpp  random_matching_test.cpp  run_tests.cpp
cmake/: Configure.cmake  cpplint.cmake
docs/: Home.md  Pipelines.md
modules/: CMakeLists.txt
modules/algorithms/: CMakeLists.txt
modules/algorithms/include/: Graph_coarsening.h  LAM.h  edmonds.h  find_bridges.h  find_joint_points.h  floyd_warshall.h  gpa.h  graph_coarsening.h  graph_distances.h  greedy.h  hard_matching.h  max_weight_matching.h  minimal_spanning_tree.h  pga.h  random_matching.h  strongly_connected_components.h
modules/algorithms/source/: find_bridges.cpp  find_joint_points.cpp  floyd_warshall.cpp  graph_coarsening.cpp  graph_distances.cpp  hard_matching.cpp  minimal_spanning_tree.cpp  random_matching.cpp  strongly_connected_components.cpp
modules/application/: CMakeLists.txt  main.cpp
modules/common/: CMakeLists.txt
modules/common/include/: dsu.h  export.h  import.h  randomize.h  timer.h
modules/common/source/: dsu.cpp  export.cpp  randomize.cpp
modules/data_structures/: CMakeLists.txt
modules/data_structures/include/: adjacency_list.h  csr.h  graph.h  jds.h  matching.h
modules/data_structures/source/: adjacency_list.cpp  csr.cpp  graph.cpp  jds.cpp  matching.cpp
modules/generators/: CMakeLists.txt
modules/generators/include/: chain_generator.h  cube_test.h  cycle_generator.h  generator.h  stars_generator.h  washington_test.h  zadeh_test.h
modules/generators/source/: cube_test.cpp  generator.cpp  washington_test.cpp  zadeh_test.cpp
modules/pch/: CMakeLists.txt
modules/pch/include/: precomp.h
modules/pch/source/: precomp.cpp
modules/pipelines/: CMakeLists.txt  evaluator.h  launch.h  pipeline_coarsening_random.h  pipeline_management.h  pipeline_sample.h  prepare.h
modules/pipelines/include/: parser.h  pipeline_parser.h  yaml_parser.h
modules/pipelines/source/: parser.cpp  pipeline_characteristics.cpp  pipeline_commands.cpp  pipeline_parser.cpp  yaml_parser.cpp
samples/: CMakeLists.txt
samples/example_bio/: CMakeLists.txt  bio.cpp
samples/example_main/: CMakeLists.txt  main.cpp
samples/example_pipelines/: CMakeLists.txt  pipeline.yaml  pipelines.cpp
scripts/: asymptotics.py  graph_visualization.py  graph_visualization_old.py  graph_visualization_unweighted.py  graph_visualization_weighted.py  histogram.py  lint.py  pipelines_table.py  static_analysis.py
tests/: CMakeLists.txt  CMakeLists.txt.in
tests/include/: edmonds_parametric_test.h  example_parametric_test.h  gpa_parametric_test.h  graph_coarsering_parametric_test.h  hard_matching_parametric_test.h  lam_parametric_test.h  pga_parametric_test.h  random_matching_parametric_test.h
tests/source/: LAM_test.cpp  al_test.cpp  algorithms_test.cpp  convert_to_undirected_graph_test.cpp  csr_test.cpp  data_structures_test.cpp  edmonds_test.cpp  example.cpp  gpa_test.cpp  greedy_test.cpp  hard_matching_test.cpp  jds_test.cpp  max_weight_matching_test.cpp  random_matching_test.cpp  run_tests.cpp
